plugins/opa/examples-rego-v1/dns-hostname-too-long/policy.failure.yaml
# This manifest is used to test the accompanying OPA policy.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: policy-test
  namespace: default
  annotations:
    certmanager.k8s.io/issuer: dummy-value-to-test-this-policy
spec:
  rules:
  # This long hostname will cause the policy to fail.
  - host: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp
            port:
              number: 80
